plugins {
    id 'java-library'
    id 'net.neoforged.moddev' version '2.0.146'
}
version = '1.5.0'
group = 'com.wysicraft.runtime'
base { archivesName = 'wysicraft' }
java.toolchain.languageVersion = JavaLanguageVersion.of(21)
if (project.hasProperty('wysicraftExportTest')) {
    sourceSets.create('exportTest') { runtimeClasspath = configurations.runtimeClasspath }
}
repositories { mavenCentral(); maven { url 'https://maven.latvian.dev/releases' }; maven { url 'https://jitpack.io'; content { includeGroup 'com.github.rtyley' } } }
neoForge {
    version = '21.1.250'
    runs {
        client { client() }
        if (project.hasProperty('wysicraftTest')) {
            testClient {
                client()
                if (project.hasProperty('wysicraftExportTest')) sourceSet = sourceSets.exportTest
                gameDirectory = project.file(findProperty('wysicraftGameDir') ?: 'run')
                systemProperty 'wysicraft.testHarness', 'true'
                if (project.hasProperty('wysicraftLocalServer')) systemProperty 'wysicraft.localTestServer', '127.0.0.1:25579'
                jvmArgument '-Xmx4G'
                programArgument '--username'
                programArgument 'WysicraftTester'
            }
        }
        server { server(); programArgument '--nogui' }
        if (project.hasProperty('wysicraftLocalServer')) {
            releaseServer {
                server(); programArgument '--nogui'
                sourceSet = sourceSets.exportTest
                gameDirectory = project.file(findProperty('wysicraftServerDir') ?: 'run-release-server')
                jvmArgument '-Xmx2G'
            }
        }
    }
    if (!project.hasProperty('wysicraftExportTest')) { mods { wysicraft { sourceSet(sourceSets.main) } } }
}
dependencies { testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'; testRuntimeOnly 'org.junit.platform:junit-platform-launcher'; testRuntimeOnly 'com.google.code.gson:gson:2.10.1'; testImplementation 'dev.latvian.mods:rhino:2101.2.8-build.91'; testRuntimeOnly 'com.google.guava:guava:33.3.1-jre' }
if (project.hasProperty('wysicraftTest')) {
    dependencies { runtimeOnly 'dev.latvian.mods:kubejs-neoforge:2101.7.2-build.377'; runtimeOnly 'dev.latvian.mods:rhino:2101.2.8-build.91' }
}
test { useJUnitPlatform() }

tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }
tasks.named('processResources') {
    // build.gradle's version is the single source: stamped into the mod metadata and read by PackRepository.
    inputs.property 'version', project.version
    filesMatching(['META-INF/neoforge.mods.toml', 'wysicraft-runtime.properties']) { expand(version: project.version) }
    from('../LICENSE') { into 'META-INF/licenses'; rename { 'WYSICRAFT-LICENSE.txt' } }
    from('../docs/third-party') {
        include 'Graal*', 'SDK-LICENSE.txt', 'sdk-LICENSE.txt', 'truffle-LICENSE.txt', 'regex-LICENSE.txt'
        into 'META-INF/licenses'
    }
}

dependencies {
    compileOnly 'dev.latvian.mods:kubejs-neoforge:2101.7.2-build.377'
    compileOnly 'dev.latvian.mods:rhino:2101.2.8-build.91'
    ['org.graalvm.polyglot:polyglot', 'org.graalvm.js:js-language', 'org.graalvm.regex:regex',
     'org.graalvm.truffle:truffle-api', 'org.graalvm.sdk:collections', 'org.graalvm.sdk:nativeimage',
     'org.graalvm.sdk:word', 'org.graalvm.shadowed:icu4j'].each { jarJar(implementation(it + ':24.1.2')); if (!project.hasProperty('wysicraftExportTest')) additionalRuntimeClasspath(it + ':24.1.2') }
}

